--- a/src/main/resources/org/jenkinsci/plugins/gwt/GenericTrigger/help.html
+++ b/src/main/resources/org/jenkinsci/plugins/gwt/GenericTrigger/help.html
@@ -1,5 +1,5 @@
 <div>
   <p>
-   Allows Generic Webhook Trigger to trigger this job.
+   Allows Teams Webhook Trigger to trigger this job.
   </p>
 </div>
